--- a/pandoc.css
+++ b/pandoc.css
@@ -428,9 +428,8 @@ html, body {
 
 @media only screen and (max-width: 600px) {
     html, body { 
-        max-width: 100%;
-        width: 100%;
-        padding: 0;
+        width: 96%;
+        padding: 2%;
         margin: 0;
         box-shadow: none;
     }
