--- a/assets/pandoc.css
+++ b/assets/pandoc.css
@@ -435,3 +435,26 @@ html, body {
         box-shadow: none;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    html, body {
+        background-color: #0d1117;
+        color: #EEEFF1;
+    }
+
+    blockquote p {
+        color: #606060;
+    }
+
+    h1, h2, h3, h4, h5, h6, hr, code {
+        color: #EEEFF1;
+    }
+
+    table tr {
+        background-color: #0d1117;
+    }
+
+    table tr:nth-child(2n), pre {
+        background-color: #161b22;
+    }
+}
