Ligthen bloquote text color

--- a/assets/pandoc.css
+++ b/assets/pandoc.css
@@ -443,7 +443,7 @@ html, body {
     }
 
     blockquote p {
-        color: #606060;
+        color: #828b95;
     }
 
     h1, h2, h3, h4, h5, h6, hr, code {
