Ligthen link color

--- a/assets/pandoc.css
+++ b/assets/pandoc.css
@@ -442,6 +442,10 @@ html, body {
         color: #EEEFF1;
     }
 
+    a {
+        color: #58a6ff;
+    }
+
     blockquote p {
         color: #828b95;
     }
